Fix for long URL wrapping issue

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -293,7 +293,7 @@ input, textarea, select, .uneditable-input {
 	margin-bottom: 20px;
 }
 
-.content a {
+a.original-link {
 	word-break: break-all;
 }
 
